# koshiba-dapp

./: .ic-assets.json5  Cargo.toml  README.md  README_Service.md  build.sh  canister_ids.json  dfx.json  package-lock.json  package.json  rustfmt.toml
HACK_BECAUSE_OF_ALLOW_JS/koshiba-dapp-frontend/src/: AccountInfoPage.js  App.js  LoginPage.js  MainPage.js  NotificationPage.js  ParticipatePage.js  SearchTemplePage.js  Sidebar.js  main.js  setupTests.js
src/koshiba-dapp-backend/: .gitignore  Cargo.toml  dfx_aliases  init.sh
src/koshiba-dapp-backend/src/: dtos.rs  entities.rs  lib.rs  models.rs  repositories.rs  services.rs  utils.rs
src/koshiba-dapp-backend/src/dtos/: event_dto.rs  payment_dto.rs  temple_dto.rs  user_dto.rs
src/koshiba-dapp-backend/src/entities/: event_entity.rs  payment_entity.rs  temple_entity.rs  user_entity.rs  vote_entity.rs
src/koshiba-dapp-backend/src/models/: address.rs  event.rs  grade.rs  payment.rs  payment_status.rs  temple.rs  user.rs  vote.rs  vote_status.rs  vote_status_with_not_voted.rs
src/koshiba-dapp-backend/src/repositories/: event_repository.rs  payment_repository.rs  temple_repository.rs  user_repository.rs  vote_repository.rs
src/koshiba-dapp-backend/src/services/: event_service.rs  payment_service.rs  temple_service.rs  user_service.rs  vote_service.rs
src/koshiba-dapp-backend/src/utils/: offset_date_time_ext.rs
src/koshiba-dapp-frontend/: package.json
src/koshiba-dapp-frontend/public/: .ic-assets.json5
src/koshiba-dapp-frontend/src/: AccountInfoPage.jsx  App copy.jsx  App.css  App.jsx  LoginPage.css  README.md  (+27 more)
(+17 files in other folders)
