[package]
name = "koshiba-dapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.7"
serde = "1.0.218"
serde_derive = "1.0.218"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
